2014-09-03  Filip Pizlo  <fpizlo@apple.com>

        FTL In implementation sets callReturnLocation incorrectly leading to crashes beneath repatchCall()
        https://bugs.webkit.org/show_bug.cgi?id=136488

        Reviewed by Mark Hahnenberg.

        * ftl/FTLCompile.cpp:
        (JSC::FTL::generateCheckInICFastPath): The call is in the slow path.
        * tests/stress/ftl-in-overflow.js: Added. This used to crash with 100% with FTL enabled.
        (foo):

2014-09-03  Akos Kiss  <akiss@inf.u-szeged.hu>

        Don't generate superfluous mov instructions for move immediate on ARM64.
        https://bugs.webkit.org/show_bug.cgi?id=136435

        Reviewed by Michael Saboff.

        On ARM64, the size of an immediate operand for a mov instruction is 16
        bits. Thus, a move immediate offlineasm instruction may potentially be
        split up to several machine level instructions. The current
        implementation always emits a mov for the least significant 16 bits of
        the value. However, if any of the bits 63:16 are significant then the
        first emitted mov already filled bits 15:0 with zeroes (or ones, for
        negative values). So, if bits 15:0 of the value are all zeroes (or ones)
        then the last mov does not need to be emitted.

        * offlineasm/arm64.rb:

2014-09-02  Brian J. Burg  <burg@cs.washington.edu>

        LegacyProfiler: remove redundant ProfileNode members and other cleanup
        https://bugs.webkit.org/show_bug.cgi?id=136380

        Reviewed by Timothy Hatcher.

        ProfileNode's selfTime and totalTime members are redundant and only used
        for dumping profile data from debug-only code. Remove the members and compute
        the same data on-demand when necessary using a postorder traversal functor.

        Remove ProfileNode.head since it is only used to calculate percentages for
        dumped profile data. This can be explicitly passed around when needed.
