@@ -1,5 +1,15 @@
 2014-09-03  Filip Pizlo  <fpizlo@apple.com>
 
+        CallEdgeProfile::visitWeak() should gracefully handle the case where primaryCallee duplicates an entry in otherCallees
+        https://bugs.webkit.org/show_bug.cgi?id=136490
+
+        Reviewed by Geoffrey Garen.
+
+        * bytecode/CallEdgeProfile.cpp:
+        (JSC::CallEdgeProfile::visitWeak):
+
+2014-09-03  Filip Pizlo  <fpizlo@apple.com>
+
         FTL In implementation sets callReturnLocation incorrectly leading to crashes beneath repatchCall()
         https://bugs.webkit.org/show_bug.cgi?id=136488
 
